# Curl-Build

./: CMakeLists.txt
CMake/: FindCurl.cmake
OpenSSL/: ssl.lib
